# optical-gating-alignment

./: .deepsource.toml  .gitignore  .gitmodules  Pipfile  README.md  accountForDrift.py  getPhase.py  globalSolution.py  memoryCC.py  memorycNW.py  nCascadingNW.py  needlemanWunsch.py  pyproject.toml  realTests.py  setup.py  simpleCC.py
localdata/: data.txt  getPeriods.py
localdata/2017-02-09 18.35.13 vid overnight/: data.txt  getPeriods.py  realTests.py
localdata/arithmicish_heart_bf/: data.txt  getPeriods.py  realTests.py
localdata/seq0/: 121369.plist  121369.tif  121370.tif  121371.plist  121372.plist  121374.plist  121374.tif  121376.plist  121377.plist  121378.plist  121378.tif  121379.tif  121380.tif  121382.plist  121383.tif  121384.plist  121385.plist  121387.tif  121388.plist  121389.tif  121392.plist  121394.plist  121400.tif  121402.tif  121408.plist  121409.plist  121410.tif  seq0_28892f31feb097f7.npy
localdata/seq1/: 121411.plist  121415.tif  121417.tif  121418.plist  (+27 more)
notebooks/: artificial_arrythmia.ipynb  compare_methods.ipynb  different_static_focusses.ipynb  different_update_intervals.ipynb  gradual_change_in_focus.ipynb
optical-gating-alignment/: cascading_needleman_wunsch.py  cross_correlation.py  multipass_regression.py  optical-gating-alignment.py
optical_gating_alignment/: cascading_needleman_wunsch.py  cross_correlation.py  helper.py  multipass_regression.py  optical_gating_alignment.py
tests/: test_cascading_needleman_wunsch.py  test_cross_correlation.py  test_helper.py  test_multipass_regression.py  test_optical-gating-alignment.py
(+579 files in other folders)
