[tool.poetry]
name = "optical-gating-alignment"
version = "2.0.0"
description = ""
authors = ["Chas Nelson <chasnelson@glasgow.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-cov = "^2.8.1"
pandas = {version = "^1.0.3", optional = true}
scikit-image = {version = "^0.16.2", optional = true}
seaborn = {version = "^0.10.0", optional = true}
jupyterlab = {version = "^2.0.1", optional = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
